2021-10-22 commit 김영한 jpa 엔티티구성